syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
option go_package = "boiler-plate/proto/users/v1;users";
import "protoc-gen-openapiv2/options/annotations.proto";
package proto.users.v1;
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "User Service",
    version: "v1",
    description: "User service handle API for CRUD users"
  },
  host: "localhost:8080",
};

service Service {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/api/v2/users"
      body: "*"
    };
  };
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      put: "/api/v2/users"
      body: "*"
    };
  };
  rpc DetailUser (DetailUserRequest) returns (DetailUserResponse) {
    option (google.api.http) = {
      get: "/api/v2/users/{id}"
    };
  }
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/api/v2/users"
    };
  }
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {
    option (google.api.http) = {
      delete: "/api/v2/users"
    };
  }
}

message Users {
  int32 id = 1;                            // Go int to ProtoBuf int32
  string name = 2;
  string email = 3;                        // Go string to ProtoBuf string
  string password = 4;                     // Go string to ProtoBuf string
  google.protobuf.Timestamp created_at = 5; // Go *time.Time to ProtoBuf Timestamp
  google.protobuf.Timestamp updated_at = 6; // Go *time.Time to ProtoBuf Timestamp
  int32 wallet_id =7;
  Wallet wallet=8;
}

message Wallet {
  int32 id = 1;                            // Go int to ProtoBuf int32
  double balance = 2;
  google.protobuf.Timestamp last_transaction = 3; // Go *time.Time to ProtoBuf Timestamp
}

message CreateUserRequest{
  string name = 1;
  string email = 2;                        // Go string to ProtoBuf string
  string password = 3;                     // Go string to ProtoBuf string
}

message CreateUserResponse{
  Users data = 1;
  MutationResponse response = 2;
}

message UpdateUserRequest{
  string id = 1;
  string name = 2;
  string email = 3;                        // Go string to ProtoBuf string
  string password = 4;                     // Go string to ProtoBuf string
}

message UpdateUserResponse{
  Users data = 1;
  MutationResponse response = 2;
}

message GetUserRequest{
  string page = 1;
  string limit= 2;
}

message GetUserResponse{
  PaginationResponse Pagination = 1;
  repeated Users users = 2; //Response users
  MutationResponse response = 3;
}
message DetailUserRequest {
  string id = 1; // Request id detailuser
}

message DetailUserResponse {
  Users user = 1; // Response detailuser
}

message DeleteUserRequest {
  string id = 1; // Request id detailuser
}

message DeleteUserResponse {
  MutationResponse response = 1;
}
message PaginationResponse {
  int32 limit = 1;
  int32 page = 2;
  int32 total_rows = 3;
  int32 total_pages =4;
}


message MutationResponse {
  string message = 1;
}